Added Sounds and did a lot of more minor work